tests/bad-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-root
spec:
  containers:
    - name: app
      image: nginx:alpine
